syntax = "proto3";

package upload.item_print.item_print;

service ItemPrintService {
  rpc ItemPrintA (ItemPrintARequest) returns (Response);
  rpc ItemPrintU (ItemPrintURequest) returns (Response);
  rpc ItemPrintD (ItemPrintDRequest) returns (Response);
  rpc ItemPrintQ (ItemPrintQRequest) returns (Response);
  rpc ItemPrintCheckQRQ (ItemPrintQRequest) returns (Response);
  rpc ItemPrintCheckQRU (ItemPrintCheckQRURequest) returns (Response);
}


message ItemPrintAResult {
    int32 IdxNo = 1;
    int32 CreatedBy = 2;
    int32 UpdatedBy = 3;

    int32 ItemSeq = 4;
    

    int32 CustSeq = 8;
    string Color = 9;
    double Qty = 10;
    string LotNo = 11;

    string StockInDate = 12;
    string ProduDate = 13;
    int32 ProductType = 14;

    string ReelNo = 15;
    int32 UserSeq = 16;
    string Location = 17;

    string Remark = 18;
    string Pallet = 19;

    string Memo01 = 20;
    string Memo02 = 21;
    string Memo03 = 22;
    string Memo04 = 23;
    string Memo05 = 24;
    string ItemNo = 25;
    string BagType = 26;
    string BagTypeName = 27;
    string StatusItem = 28;
    

}



message ItemPrintUResult {
    int32 IdxNo = 1;
    int32 UpdatedBy = 2;
    string IdSeq = 3;

    int32 ItemSeq = 4;
    string QrCode = 5;


    int32 CustSeq = 8;
    string Color = 9;
    double Qty = 10;
    string LotNo = 11;

    string StockInDate = 12;
    string ProduDate = 13;
    int32 ProductType = 14;

    string ReelNo = 15;
    int32 UserSeq = 16;
    string Location = 17;

    string Remark = 18;
    string Pallet = 19;

    string Memo01 = 20;
    string Memo02 = 21;
    string Memo03 = 22;
    string Memo04 = 23;
    string Memo05 = 24;

    string ItemNo = 25;
    string BagType = 26;
    string BagTypeName = 27;
    string StatusItem = 28;



   
}

message ItemPrintDResult { 
  int32 IdxNo = 1;
  string IdSeq = 2;
}

message ItemPrintQResult { 
  string KeyItem1 = 1; 
  string KeyItem2 = 2;
  string KeyItem3 = 3;
  string KeyItem4 = 4;
  string KeyItem5 = 5;
  string KeyItem6 = 6;
  string KeyItem7  = 7;
  string KeyItem8  = 8;
  string KeyItem9  = 9;
  string KeyItem10  = 10;

}
message ItemPrintCheckQRUResult { 
  string LotNo = 1; 
  int32 ItemSeq = 2;
  string Dummy1 = 3;
  string Dummy2 = 4;
  int32 UpdatedBy = 5;

}



message ItemPrintARequest {
  repeated ItemPrintAResult result = 1;  
  map<string, string> metadata = 2;
}
message ItemPrintURequest {
  repeated  ItemPrintUResult result = 1;  
  map<string, string> metadata = 2;
}
message ItemPrintDRequest {
  repeated  ItemPrintDResult result = 1;  
  map<string, string> metadata = 2;
}
message ItemPrintQRequest {
  ItemPrintQResult result = 1;  
  map<string, string> metadata = 2;
}
message ItemPrintCheckQRURequest {
  ItemPrintCheckQRUResult result = 1;  
  map<string, string> metadata = 2;
}


message Response {
  bool success = 1;  
  string message = 2;      
  string data = 3; 
}